coordinator/src/trade/snapshots/coordinator__trade__tests__check@Long-100-change-direction.snap
---
source: coordinator/src/trade/mod.rs
expression: resized_position
---
ResizedPosition {
    contracts: 100,
    coordinator_direction: Long,
    average_execution_price: 20000,
    coordinator_liquidation_price: 14285.714285714285714285714286,
    trader_liquidation_price: 33333.333333333333333333333333,
    margin_coordinator: Amount(0.00250000 BTC),
    margin_trader: Amount(0.00250000 BTC),
    collateral_reserve_coordinator: Amount(0.00321214 BTC),
    collateral_reserve_trader: Amount(0.00180968 BTC),
    realized_pnl: Some(
        SignedAmount(-0.00136245 BTC),
    ),
}
